@@ -1,3 +1,5 @@
+2006/8/20 -- released version 20060820_trunk
+
 2006/8/19 -- released version 20060819_trunk
 
 2006/8/18 -- released version 20060818_trunk
